Fix jumping text in comment input on input resize
Until T169335 is resolved. This also removes the scroll bar from the input (30 line limit is removed).

--- a/src/less/CommentForm.less
+++ b/src/less/CommentForm.less
@@ -160,6 +160,10 @@
     width: calc(~"100% + 2px");
     margin: -1px;
     position: relative;
+
+    // Fix for the jumping text until T169335 is resolved.
+    padding-bottom: 20px;
+    overflow-y: hidden;
   }
 
   &.oo-ui-textInputWidget.oo-ui-widget-disabled {
